添加注释，更改依赖注入形式